--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blockweavenet",
+  "name": "BlockFractal",
   "version": "1.0.0",
   "description": "A decentralized network management smart contract system for adding and managing nodes on-chain.",
   "scripts": {
